<?xml version="1.0"?>
<package format="2">
  <name>yumipy</name>
  <version>0.1.0</version>
  <description>The yumipy package</description>

  <maintainer email="todo@todo.todo">todo</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>rospy</depend>
  <depend>autolab_core</depend>

</package>
